#
# Copyright SCRIPT TACTICS LLC https://www.scripttactics.com
#
#

[metadata]
name = klv_parser
version = attr: klv_parser.__version__
url = https://github.com/ScriptTactics/klv_py
project_urls =
  CI: GitHub Actions = https://github.com/ScriptTactics/klv_py/actions
  GitHub: issues = https://github.com/ScriptTactics/klv_py/issues
  GitHub: repo = https://github.com/ScriptTactics/klv_py
description = MISB 601 KLV Parser
long_description = file: SETUP.md
long_description_content_type = text/markdown
maintainer = SCRIPT TACTICS LLC <support@scripttactics.com>
maintainer_email = contact-project+script-tactics-yolo-tak-64784951-issue-@incoming.gitlab.com
license = Proprietary
classifiers =
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

  License :: Other/Proprietary License
  Operating System :: OS Independent
  Copyright :: 2024 SCRIPT TACTICS LLC
  Intended Audience :: Developers
  Development Status :: 1 - Alpha/Unstable

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: OS Independent
keywords =
  Cursor on Target
  CoT
  ATAK
  TAK
  WinTAK
  TAK
  TAK Server
  KLV
  UAS


[options]
packages = find:
python_requires = >=3.10, <4


[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203, E704

[pylint]
max-line-length = 88

[pycodestyle]
ignore = E203
max_line_length = 88
